objects/ssot__RegulatoryCodeAssessmentInd__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssessmentIndicatorDefinitionId__c</fullName>
        <label>Assessment Indicator Definition</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Regulatory Code Assessment Ind Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryCodeId__c</fullName>
        <label>Regulatory Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512789543_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulatoryCodeAssessmentInd_Assessme_rel</label>
        <referenceTo>ssot__AssessmentIndicatorDefinition__dlm</referenceTo>
        <relationshipLabel>RegulatoryCodeAssessmentInd_Assessme_rel</relationshipLabel>
        <relationshipName>rel_1739512789543_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512796995_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulatoryCodeAssessmentInd_Regulato_rel</label>
        <referenceTo>ssot__RegulatoryCode__dlm</referenceTo>
        <relationshipLabel>RegulatoryCodeAssessmentInd_Regulato_rel</relationshipLabel>
        <relationshipName>rel_1739512796995_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>